# BeTheMC

./: .env.example  .gitignore  =3.0.0  =4.0.0  ARCHITECTURE_COMPARISON.md  README.md  SIMPLE_EXAMPLE.py  SIMPLE_GUIDE.md  STUDY_GUIDE.md  class_parameter_example.py  data_types_example.py  docker-compose.yml  main.py  main_complex.py  pyproject.toml  requirements.txt  run_api.py  test_qdrant.py
config/: default.yaml
docs/: api_testing_guide.md  authentication.md  mongodb_integration.md
docs/api/: README.md
docs/debugging/: game_state_persistence_issue.md
docs/performance/: save_state_optimization.md  summarization_techniques.md
scripts/: fetch_kanto_data.py  setup.ps1  setup.sh  test_mongodb.py
src/: __init__.py
src/bethemc/: __init__.py  database.py
src/bethemc/ai/: generator.py  prompts.py
src/bethemc/api/: __init__.py  app.py  game_manager.py  models.py  routes.py
src/bethemc/auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/bethemc/config/: __init__.py  settings.py
src/bethemc/core/: __init__.py  game.py  progression.py  progression_v2.py  state.py
src/bethemc/data/: __init__.py  vector_store.py
src/bethemc/database/: __init__.py  connection.py  service.py
src/bethemc/models/: __init__.py  api.py  core.py  models.py
src/bethemc/services/: __init__.py  game_service.py  save_service.py
src/bethemc/utils/: logger.py
src/bethemc_complex/: README.md  __init__.py
src/database/: vector_store.py
src/game/: game_loop.py  story_generator.py
src/scripts/: load_data.py
src/utils/: config.py  logger.py
tests/integration/: test_anime_style.py  test_api.py  test_compressed_context.py  test_data_loading.py  test_modular_api.py
(+27 files in other folders)
